processing поменял для тестирования main в FileKeyHash